unpackaged/main/default/objects/ERS_Payment_Department_ID__mdt/ERS_Payment_Department_ID__mdt.object-meta.xml
<CustomObject>
    <label>ERS Payment Department ID</label>
    <pluralLabel>Department ID&#39;s</pluralLabel>
</CustomObject>