unpackaged/main/default/objects/ERS_Payment_Department_ID__mdt/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>337006</fullName>
                <default>true</default>
                <label>337006</label>
            </value>
            <value>
                <fullName>182002</fullName>
            </value>
            <value>
                <fullName>334006</fullName>
            </value>
            <value>
                <fullName>196036</fullName>
            </value>
            <value>
                <fullName>338003</fullName>
            </value>
            <value>
                <fullName>886001</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>