unpackaged/main/default/objects/ERS_Payment_Department_ID__mdt/fields/Department_ID__c.field-meta.xml
<CustomField>
    <fullName>Department_ID__c</fullName>
    <label>Department ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>420999</fullName>
                <default>true</default>
                <label>420999</label>
            </value>
            <value>
                <fullName>007112</fullName>
            </value>
            <value>
                <fullName>200011</fullName>
            </value>
            <value>
                <fullName>041002</fullName>
            </value>
            <value>
                <fullName>009230</fullName>
            </value>
            <value>
                <fullName>200009</fullName>
            </value>
            <value>
                <fullName>200017</fullName>
            </value>
            <value>
                <fullName>301B73</fullName>
            </value>
            <value>
                <fullName>305B73</fullName>
            </value>
            <value>
                <fullName>309B47</fullName>
            </value>
            <value>
                <fullName>309B73</fullName>
            </value>
            <value>
                <fullName>313B73</fullName>
            </value>
            <value>
                <fullName>344B73</fullName>
            </value>
            <value>
                <fullName>385B47</fullName>
            </value>
            <value>
                <fullName>385B73</fullName>
            </value>
            <value>
                <fullName>386B47</fullName>
            </value>
            <value>
                <fullName>386B73</fullName>
            </value>
            <value>
                <fullName>391B47</fullName>
            </value>
            <value>
                <fullName>391B73</fullName>
            </value>
            <value>
                <fullName>393B47</fullName>
            </value>
            <value>
                <fullName>393B73</fullName>
            </value>
            <value>
                <fullName>488925</fullName>
            </value>
            <value>
                <fullName>007141</fullName>
            </value>
            <value>
                <fullName>210001</fullName>
            </value>
            <value>
                <fullName>410004</fullName>
            </value>
            <value>
                <fullName>351B73</fullName>
            </value>
            <value>
                <fullName>352B47</fullName>
            </value>
            <value>
                <fullName>352B73</fullName>
            </value>
            <value>
                <fullName>371B47</fullName>
            </value>
            <value>
                <fullName>371B73</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>