unpackaged/main/default/objects/ERS_Payment_Department_ID__mdt/fields/EventType__c.field-meta.xml
<CustomField>
    <fullName>EventType__c</fullName>
    <label>EventType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Member</fullName>
                <default>true</default>
                <label>Member</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>