unpackaged/main/default/objects/ERS_Payment_Department_ID__mdt/fields/Facility_ID__c.field-meta.xml
<CustomField>
    <fullName>Facility_ID__c</fullName>
    <label>Facility ID</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0197</fullName>
                <default>true</default>
                <label>0197</label>
            </value>
            <value>
                <fullName>0598</fullName>
            </value>
            <value>
                <fullName>0950</fullName>
            </value>
            <value>
                <fullName>0949</fullName>
            </value>
            <value>
                <fullName>1397</fullName>
            </value>
            <value>
                <fullName>4097</fullName>
            </value>
            <value>
                <fullName>9097</fullName>
            </value>
            <value>
                <fullName>9095</fullName>
            </value>
            <value>
                <fullName>8597</fullName>
            </value>
            <value>
                <fullName>8596</fullName>
            </value>
            <value>
                <fullName>9198</fullName>
            </value>
            <value>
                <fullName>9195</fullName>
            </value>
            <value>
                <fullName>9196</fullName>
            </value>
            <value>
                <fullName>9193</fullName>
            </value>
            <value>
                <fullName>C6</fullName>
            </value>
            <value>
                <fullName>MI700</fullName>
            </value>
            <value>
                <fullName>MI709</fullName>
            </value>
            <value>
                <fullName>N6000</fullName>
            </value>
            <value>
                <fullName>N2559</fullName>
            </value>
            <value>
                <fullName>5189</fullName>
            </value>
            <value>
                <fullName>5188</fullName>
            </value>
            <value>
                <fullName>5193</fullName>
            </value>
            <value>
                <fullName>7196</fullName>
            </value>
            <value>
                <fullName>7187</fullName>
            </value>
            <value>
                <fullName>MR</fullName>
            </value>
            <value>
                <fullName>CR</fullName>
            </value>
            <value>
                <fullName>NR</fullName>
            </value>
            <value>
                <fullName>WR</fullName>
            </value>
            <value>
                <fullName>MIR</fullName>
            </value>
            <value>
                <fullName>ND8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>