unpackaged/main/default/objects/ERS_Payment_Department_ID__mdt/fields/RAP__c.field-meta.xml
<CustomField>
    <fullName>RAP__c</fullName>
    <label>RAP</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>False</fullName>
                <default>true</default>
                <label>false</label>
            </value>
            <value>
                <fullName>True</fullName>
                <label>true</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>