unpackaged/main/default/objects/ERS_Payment_Department_ID__mdt/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ST PETE REGION 1</fullName>
                <default>true</default>
                <label>ST PETE REGION 1</label>
            </value>
            <value>
                <fullName>HEATHROW REGION 2</fullName>
            </value>
            <value>
                <fullName>WEST PALM REGION 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>