unpackaged/main/default/objects/ERS_Payment_Department_ID__mdt/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FL</fullName>
                <default>true</default>
                <label>FL</label>
            </value>
            <value>
                <fullName>GA</fullName>
            </value>
            <value>
                <fullName>PR</fullName>
            </value>
            <value>
                <fullName>TN</fullName>
            </value>
            <value>
                <fullName>IL</fullName>
            </value>
            <value>
                <fullName>MI</fullName>
            </value>
            <value>
                <fullName>MN</fullName>
            </value>
            <value>
                <fullName>NE</fullName>
            </value>
            <value>
                <fullName>ND</fullName>
            </value>
            <value>
                <fullName>WI</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>IA</fullName>
            </value>
            <value>
                <fullName>ALL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>